# loopi_compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  a.out  as.sh  ast.dot  build.sh  main.c  main.s  output.s  parser.txt  print_c.s  program  run_assembly.sh  tasks.md  test.sh  test_passed.txt
.github/workflows/: ci.yml
docs/: report.aux  report.fdb_latexmk  report.fls  report.tex  report.toc
examples/: Arithmetic_Operations.txt  Boolean_And_Arithmetic.txt  Boolean_Assignment.txt  Boolean_Operations.txt  Multiple_Declarations.txt  Simple_Return.txt  Variable_Reassignment.txt  prog.txt
src/: a.out  ast.c  ast.h  attributes.c  attributes.h  build.sh  calc-lexico.l  calc-sintaxis.gv  calc-sintaxis.output  calc-sintaxis.tab.c  calc-sintaxis.tab.h  calc-sintaxis.tab.l  calc-sintaxis.y  errors.c  errors.h  estructura.md  eval.c  eval.h  grammar.txt  input.txt  instruction3dir.c  instruction3dir.h  lex.yy.c  main.c  old_2.txt  p_3.txt  prueba.c  prueba.s  semantic.c  semantic.h  symbol_table.c  symbol_table.h
src/error-handling/: errors.c  errors.h
src/frontend/: copy_prev_gpt.y  lex.yy.c  lexer copy.txt  lexer.l  parser copy.txt  parser copy.y  parser.output  parser.tab.c  parser.y  semantic copy.c  semantic.c  semantic.h  simple_parser.y  symbol_table.c  (+1 more)
tests/: prueba.txt  syntax_error.txt  test.txt  test_2.txt  test_bool.txt  test_call_f.txt  test_call_function.txt  test_call_function_param.txt  test_div.txt  test_fact.txt  test_func_offset.txt  test_greater.txt  test_if.txt  test_if_else.txt  test_minus.txt  test_not.txt  test_pseudo.txt  test_while.txt  test_while_factorial.txt
trash/: Conditional_Example.txt  error_handling.c  main.c
(+55 files in other folders)
